@@ -110,7 +110,10 @@ namespace Chummer
 
             if (blnUseCurrentValues)
             {
-                cboGamePlay.SelectedValue = _objCharacter.GameplayOption;
+                string strGameplayOption = _objCharacter.GameplayOption;
+                if (!string.IsNullOrEmpty(_objCharacter.PriorityArray))
+                    strGameplayOption += '|' + _objCharacter.PriorityArray;
+                cboGamePlay.SelectedValue = strGameplayOption;
                 if (cboGamePlay.SelectedIndex == -1)
                     cboGamePlay.SelectedValue = _strDefaultOption;
 
@@ -122,12 +125,17 @@ namespace Chummer
 
                 _intQualityLimits = _objCharacter.GameplayOptionQualityLimit;
                 chkIgnoreRules.Checked = _objCharacter.IgnoreRules;
-                nudMaxAvail.Value = objCharacter.MaximumAvailability;
+                nudMaxAvail.Value = Math.Min(objCharacter.MaximumAvailability, nudMaxAvail.Maximum);
                 nudSumtoTen.Value = objCharacter.SumtoTen;
             }
             else if (_xmlGameplayOptionsDataGameplayOptionsNode != null)
             {
-                XPathNavigator objXmlSelectedGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (cboGamePlay.SelectedValue?.ToString() ?? string.Empty) + "\"]");
+                string strSelectedGameplayOption = cboGamePlay.SelectedValue?.ToString();
+                if (strSelectedGameplayOption != null && strSelectedGameplayOption.IndexOf('|') != -1)
+                {
+                    strSelectedGameplayOption = strSelectedGameplayOption.Split('|')[0];
+                }
+                XPathNavigator objXmlSelectedGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (strSelectedGameplayOption ?? string.Empty) + "\"]");
                 objXmlSelectedGameplayOption.TryGetInt32FieldQuickly("karma", ref _intQualityLimits);
                 objXmlSelectedGameplayOption.TryGetDecFieldQuickly("maxnuyen", ref _decNuyenBP);
                 nudMaxNuyen.Value = _decNuyenBP;
@@ -212,7 +220,12 @@ namespace Chummer
         {
             nudSumtoTen.Visible = false;
             lblSumToX.Visible = false;
-            XPathNavigator xmlSelectedGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (cboGamePlay.SelectedValue?.ToString() ?? string.Empty) + "\"]");
+            string strSelectedGameplayOption = cboGamePlay.SelectedValue?.ToString();
+            if (strSelectedGameplayOption != null && strSelectedGameplayOption.IndexOf('|') != -1)
+            {
+                strSelectedGameplayOption = strSelectedGameplayOption.Split('|')[0];
+            }
+            XPathNavigator xmlSelectedGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (strSelectedGameplayOption ?? string.Empty) + "\"]");
             string strSelectedBuildMethod = cboBuildMethod.SelectedValue?.ToString();
             switch (strSelectedBuildMethod)
             {
@@ -267,7 +280,12 @@ namespace Chummer
         private void cboGamePlay_SelectedIndexChanged(object sender, EventArgs e)
         {
             // Load the Priority information.
-            XPathNavigator objXmlGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (cboGamePlay.SelectedValue?.ToString() ?? string.Empty) + "\"]");
+            string strSelectedGameplayOption = cboGamePlay.SelectedValue?.ToString();
+            if (strSelectedGameplayOption != null && strSelectedGameplayOption.IndexOf('|') != -1)
+            {
+                strSelectedGameplayOption = strSelectedGameplayOption.Split('|')[0];
+            }
+            XPathNavigator objXmlGameplayOption = _xmlGameplayOptionsDataGameplayOptionsNode.SelectSingleNode("gameplayoption[name = \"" + (strSelectedGameplayOption  ?? string.Empty) + "\"]");
             if (objXmlGameplayOption != null)
             {
                 int intTemp = _intDefaultMaxAvail;
