@@ -116,7 +116,7 @@
       <pointbuykarma>1000</pointbuykarma>
       <lifemoduleskarma>950</lifemoduleskarma>
       <sumtoten>15</sumtoten>
-      <maxavailability>999</maxavailability>
+      <maxavailability>100</maxavailability>
       <maxnuyen>25</maxnuyen>
       <contactmultiplier>6</contactmultiplier>
       <redlinerexclusion>
